2012-06-03 Martin F. Schumann <mfs@mfs.name>

   * moved maps download and installation to a seperate package (unvanquished-maps), which now is an optdepend

2012-05-26 Martin F. Schumann <mfs@mfs.name>

	* give the user unvanquished-server the /sbin/nologin-shell to avoid it appearing on login screens
   * don't delete server config on uninstall (instead if called with -n)

2012-05-24 Martin F. Schumann <mfs@mfs.name>

	* fixed broken link for i686

2012-05-23 Martin F. Schumann <mfs@mfs.name>

	* added installation of unvanquished-server
   * maps are now downloaded automatically

2012-05-23 Martin F. Schumann <mfs@mfs.name>

	* inital release of the AUR package.