@@ -9,7 +9,7 @@
 # Maintainer: Mattias Andrée <maandree@operamail.com>
 pkgname=correcthorse-alt-git
 pkgver=20120621
-pkgrel=1
+pkgrel=2
 pkgdesc="Passphrase generator based on http://xkcd.com/936/"
 arch=('i686' 'x86_64')
 url="https://github.com/maandree/correcthorse"
