@@ -1,7 +1,7 @@
 # Maintainer: Daniel Fiser <danfis@danfis.cz>
 pkgname=opts
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Opts is a library for parsing command line options"
 arch=(i686 x86_64)
 url="http://opts.danfis.cz"
@@ -15,7 +15,7 @@ backup=()
 install=
 source=(http://libccd.danfis.cz/files/$pkgname-$pkgver.tar.gz)
 noextract=()
-md5sums=('a08a403497742760efa8860a21612556')
+md5sums=('011d874a3c143fed5d2a758d4b46f9b0')
 
 build() {
     cd ${pkgname}-${pkgver}
