@@ -1,7 +1,7 @@
 # Maintainer: Jan Dolinar <dolik.rce@gmail.com>
 
 pkgname=theide-svn
-pkgver=5070
+pkgver=5072
 pkgrel=1
 pkgdesc="Modern IDE designed for developping large U++/C++ applications"
 arch=('i686' 'x86_64')
