@@ -1,13 +1,13 @@
 # Maintainer: Martin F. Schumann <mfs@mfs.name>
 pkgname=unvanquished-git
-pkgver=20120603
-pkgrel=2
+pkgver=20120621
+pkgrel=1
 pkgdesc="A unique team-based first-person shooter, which pits the aliens against the humans."
 arch=('x86_64' 'i686')
 url="http://www.unvanquished.net"
 license=('GPL3')
 groups=()
-depends=('curl' 'freetype2' 'glew' 'gmp' 'libjpeg-turbo' 'ncurses' 'libogg' 'openal' 'libpng' 'sdl' 'libvorbis' 'zlib' 'libwebp' 'libtheora' 'nettle' 'speex')
+depends=('curl' 'freetype2' 'glew' 'gmp' 'libjpeg-turbo' 'ncurses' 'libogg' 'libpng' 'sdl' 'libvorbis' 'zlib' 'libwebp' 'libtheora' 'nettle' 'speex' 'xvidcore' 'hicolor-icon-theme' 'xdg-utils')
 makedepends=('git' 'cmake')
 optdepends=('unvanquished-maps: The unvanquished maps package, needed to run a server')
 provides=('unvanquished')
@@ -17,14 +17,15 @@ backup=('etc/unvanquished-server/maprotation.cfg' 'etc/unvanquished-server/serve
 options=()
 install='unvanquished.install'
 changelog='changelog'
-source=('unvanquished.sh' 'unvanquished-download-paks.sh' 'unvanquished.desktop' 'unvanquished.install' 'unvanquished-server.sh' 'changelog')
+source=('unvanquished.sh' 'unvanquished-download-paks.sh' 'unvanquished.desktop' 'unvanquished.install' 'unvanquished-server.sh' 'changelog' 'cmake_install.patch')
 noextract=()
-md5sums=('ac17e7744e1bb0e759e7f63e6634376f'
+md5sums=('fe56a773c62f74a9ad4ede92757c505a'
          '40dd5f8958bee9764815f8fbd2208167'
          '9128f8aaa682de2adb6258789cf83cb1'
-         '13218ff55aee0039c34e66a6a593a3f0'
-         '999d6be8043fa9ecda19710f5c7ad919'
-         '5bc7b1e3137c65924f7d60cbfc26764d')
+         '1df68792a60ae85fd7fa3f9b14bde024'
+         '82f011ae79a87e1220dfb9f4650bc1bf'
+         '78f4adc1ff1e422cdd2e6f76e706b183'
+         'a2552c78c2c9e62e053e805f5f483648')
 
 _gitroot="https://github.com/Unvanquished/Unvanquished.git"
 _gitname="unvanquished"
@@ -45,22 +46,25 @@ build() {
 
   cd "$srcdir/$_gitname"
 
-  cmake -D CMAKE_INSTALL_PREFIX="/usr" . && make
+ # cmake -D CMAKE_INSTALL_PREFIX="/usr" . && make
+  cmake . && make
+  
+  patch cmake_install.cmake -i ../cmake_install.patch
 }
 
 package() {
   # Create pkg dirs
   cd "$pkgdir"
-  install -d opt/unvanquished/main var/lib/unvanquished usr/share/icons/hicolor/128x128/apps usr/share/applications
+  install -d var/lib/unvanquished usr/share/applications usr/bin opt
   
   # install files
   cd "$srcdir/$_gitname"
   make DESTDIR="$pkgdir/" install
-  mv "$pkgdir"/usr/bin/* "$pkgdir"/opt/unvanquished/
-  install -m 644 debian/unvanquished.png "$pkgdir"/usr/share/icons/hicolor/128x128/apps/
-  install -m 755 download-pk3.sh "$pkgdir"/opt/unvanquished/
-  cp -r main/* "$pkgdir"/opt/unvanquished/main/
-  install *.so "$pkgdir"/opt/unvanquished/
+  mv "$pkgdir"/Unvanquished "$pkgdir"/opt/$pkgname
+  install -m 644 debian/unvanquished.png "$pkgdir"/opt/$pkgname/
+  install -m 755 download-pk3.sh "$pkgdir"/opt/$pkgname/
+#  cp -r main/* "$pkgdir"/opt/$pkgname/main/
+#  install *.so "$pkgdir"/opt/$pkgname/
 
   cd "$srcdir"
   install -m 755 unvanquished*.sh "$pkgdir"/usr/bin/
@@ -69,11 +73,11 @@ package() {
   # Download and install pk3 files
   "$_gitname"/download-pk3.sh dl/main dl/cache
   if [ -e dl/main/navmesh-default-0.1.pk3 ]; then rm -f dl/main/navmesh-default-0.1.pk3; fi
-  cp -r dl/main "$pkgdir"/opt/unvanquished/
+  cp -r dl/main "$pkgdir"/opt/$pkgname/
   cp -r dl/cache/* "$pkgdir"/var/lib/unvanquished/
 
   # link arch-specific executables
-  cd "$pkgdir"/opt/unvanquished
+  cd "$pkgdir"/opt/$pkgname
   if [ "$CARCH" == "i686" ]; then a="i386"; else a="$CARCH"; fi
   ln -s daemon.$a unvanquished
   ln -s daemonded.$a unvanquishedded
