@@ -1,0 +1,8 @@
+123c123
+<      fixup_bundle("${CMAKE_INSTALL_PREFIX}/Unvanquished/daemon.x86_64"   "${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGLx86_64.so;${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGL3x86_64.so;${CMAKE_INSTALL_PREFIX}/Unvanquished/snd_openal.so"   "")
+---
+>      fixup_bundle("$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/daemon.x86_64"   "$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGLx86_64.so;$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGL3x86_64.so;$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/snd_openal.so"   "")
+131c131
+<      fixup_bundle("${CMAKE_INSTALL_PREFIX}/Unvanquished/daemonded.x86_64"   "${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGLx86_64.so;${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGL3x86_64.so;${CMAKE_INSTALL_PREFIX}/Unvanquished/snd_openal.so"   "")
+---
+>      fixup_bundle("$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/daemonded.x86_64"   "$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGLx86_64.so;$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/librendererGL3x86_64.so;$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/Unvanquished/snd_openal.so"   "")
