@@ -14,6 +14,8 @@ post_install() {
      chown unvanquished-server:games $UNV_SERVER_DATA/default.cfg
    fi
    ln -fs /etc/unvanquished-server/maprotation.cfg /etc/unvanquished-server/server.cfg $UNV_SERVER_DATA/
+
+   xdg-icon-resource install --novendor --size 128 /opt/unvanquished-git/unvanquished.png unvanquished
 }
 
 post_upgrade() {
@@ -30,4 +32,5 @@ pre_rm() {
 
 post_rm() {
    userdel -r unvanquished-server > /dev/null
+   xdg-icon-resource uninstall --size 128 unvanquished
 }
