@@ -1,3 +1,3 @@
 #! /bin/sh
-cd /opt/unvanquished
+cd /opt/unvanquished-git
 exec ./unvanquished +set fs_libpath "$PWD" +set fs_basepath /var/lib/unvanquished "$@"
