@@ -1,7 +1,7 @@
 # Maintainer: Jan Dolinar <dolik.rce@gmail.com>
 
 pkgname=upp-svn
-pkgver=5070
+pkgver=5072
 pkgrel=1
 pkgdesc="Radical and innovative multiplatform C++ framework (known as U++)"
 arch=('any')
