@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Zeeb
+Comment=Rename movie files
+Exec=zeeb
+Icon=zeeb.png
+Terminal=false
+Type=Application
+StartupNotify=true
+Categories=AudioVideo;AudioVideoEditing;
