@@ -1,0 +1,1 @@
+adobe-air /opt/zeeb/zeeb.air
