@@ -1,3 +1,7 @@
+2012-06-21 Martin F. Schumann <mfs@mfs.name>
+
+   * adjusted PKGBUILD to new installation procedure
+
 2012-06-03 Martin F. Schumann <mfs@mfs.name>
 
    * moved maps download and installation to a seperate package (unvanquished-maps), which now is an optdepend
